--- a/Tugas8/pbo.html
+++ b/Tugas8/pbo.html
@@ -4,7 +4,7 @@
   const pbo = {
     model: {
       mahasiswa: [
-        { username: "ratih", pin: "ratih123" },
+        { username: "faishal kahfi", pin: "faishal123" },
         { username: "afwanda", pin: "afwanda123" },
         { username: "shandy", pin: "sandi123" },
       ],
