--- a/Tugas8/pbo.html
+++ b/Tugas8/pbo.html
@@ -20,7 +20,7 @@
       signform: function () {
         return `
           <div style="width: 300px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <h2 style="color: #333;">Login</h2>
+            <h2 style="color: #333;">Login Mahasiswa</h2>
             <div style="margin-bottom: 15px;">
               <label for="username" style="display: block; text-align: left; font-weight: bold;">Username:</label>
               <input type="text" id="username" placeholder="Masukkan username" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
